# Insan_Object

./: README.md  pyproject.toml  test.py
objects/: __init__.py  errorset.py  functools.py  object.py  object_manager.py
