[tool.poetry]
name = "Insan-Objects"
version = "0.0.2"
description = "Better Than Other"
authors = ["Islam Bin ElHassan <ai_islam1411@insantechnology.com>"]
readme = "README.md"
repository = "https://github.com/ai1islam1411/"
packages = [{include = "objects"}]

[tool.poetry.dependencies]
python = "^3.7"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"